New in version 0.4.2
===============================
* Fixed python binding that failed on missing px_free symbole

New in version 0.4.1
===============================
* Perl bindings have been integrated into the CMake Build System
* Vala bindings are installed if -DWITH_VALA=yes is passed to cmake
* All extensions can be disabled using WITH_*=OFF cmake options
* socks5:// and socks4:// can now be returned
* Many bugfixes

New in version 0.4.0
===============================
* C++ rewrite
* Small API change (px_proxy_factory_get_proxy() can now return NULL)
* SOVERSION bump 
* libmodman is now a seperate library
* Migrate to cmake
* Windows support (config_w32reg, ignore_hostname; VC++ support)
* MacOSX support (config_macosx, ignore_hostname)
* Built-in modules support   
* Support for chunked encoding
* Move to hidden visibility by default
* KDE's KConfig symantics are fully supported
* Removeal of all PX_* env variables (no longer needed)
* Symbol based detection of relevant pacrunner
* Reworked config_gnome to not suck (its *much* faster)
* Many other things I can't remember

New in version 0.3.1
====================
- Bugfixes
  + config file parser reads all sections
  + KDE session detection based on environment varibales,
    as suggested by KDE upstream.
- KDE configuration module is the first module in C++ and
  now links to libkdecore4 in order to properly detect the
  configuration folder for kde.
- At the moment we're not compatible with KDE3. Sorry.
- .NET bindings can now properly be installed and it should
  be possible for packagers to provide them.

New in version 0.3.0
====================
* WARNING!!! Slight API change!!! see docs 
  for px_proxy_factory_get_proxies()
* Credentials support (see API change above)
* A complete rewrite of the module manager
* file:// as valid PAC URLs
* Sample Mono application
* Automake 1.11 shaved output
* gnome backend rewrite (now w/o thread issues)
* Test suite base functionality exists