@@ -1,5 +1,6 @@
 
 include_directories( ${PERL_INCLUDE_PATH} ${CMAKE_SOURCE_DIR}/libproxy )
+link_directories(${LIBPROXY_LIBRARY_DIRS})
 
 # Run doxsubpp.pl to run xsubpp on Libproxy.xs
 add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Libproxy.c
