@@ -1,4 +1,5 @@
 include_directories("../libproxy")
+link_directories(${LIBPROXY_LIBRARY_DIRS})
 
 add_executable(proxy proxy.c)
 target_link_libraries(proxy libproxy)
